# hacs-scaleway-object-storage

./: .editorconfig  .gitignore  .mise.toml  Makefile  README.md  hacs.json  pyproject.toml
.github/workflows/: main.yaml
custom_components/s3_compatible_backups/: manifest.json
custom_components/scaleway_object_storage/: __init__.py  backup.py  config_flow.py  const.py  helpers.py  manifest.json
custom_components/scaleway_object_storage/translations/: en.json
tests/: stub_test.py
