[project]
name = "scaleway-object-storage"
version = "0.2.0"
requires-python = "==3.14.5"
authors = [{ name = "Björn Petersen", email = "git@bjoernpetersen.net" }]
classifiers = [
    "Private :: Do Not Upload",
]

dependencies = [
    "aiohttp-s3-client==1.1.2",
]

[dependency-groups]
dev = [
    "homeassistant==2026.6.4",
    "mypy ==2.1.0",
    "pytest ==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff ==0.15.16",
]

[build-system]
requires = ["uv_build==0.11.23"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "custom_components"

[tool.mypy]
strict = true

[tool.pytest]
strict = true
addopts = [
    "--import-mode=importlib",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FAST",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
